--- a/templates/default/rt/rtticketmessagesbox.html
+++ b/templates/default/rt/rtticketmessagesbox.html
@@ -191,8 +191,8 @@
 												<A href="mailto:{$message.mailfrom|escape}">{$message.mailfrom|escape}</A>
 											{else}
 												{$ticket.requestor|escape}
-												{if $ticket.requestoremail}
-													&lt;<A href="mailto:{$ticket.requestoremail|escape}">{$ticket.requestoremail|escape}</A>&gt;
+												{if $ticket.requestor_mail}
+													&lt;<A href="mailto:{$ticket.requestor_mail|escape}">{$ticket.requestor_mail|escape}</A>&gt;
 												{/if}
 											{/if}
 											{if $message.phonefrom}
