enhancement: optional ticket comment details inclusion in extended ticket list report

--- a/templates/default/rt/rtprintindex.html
+++ b/templates/default/rt/rtprintindex.html
@@ -196,6 +196,10 @@
 					<input type="checkbox" name="contacts" value="1" form="ticketlist" checked>
 					{trans("include contact info")}
 				</label>
+				<label>
+					<input type="checkbox" name="comment-details" value="1" form="ticketlist" checked>
+					{trans("comment details")}
+				</label>
 			</td>
 		</tr>
 	</tbody>
