--- a/templates/default/rt/rtprinttickets-ext.html
+++ b/templates/default/rt/rtprinttickets-ext.html
@@ -10,6 +10,50 @@
 		width: 70%;
 	}
 
+	.message-header {
+		background-image: linear-gradient(to right, grey 25%, rgba(255,255,255,0) 0%);
+		background-position: bottom;
+		background-size: 5px 1px;
+		background-repeat: repeat-x;
+	}
+
+	.message-header-container {
+		display: inline-flex;
+		flex-grow: 1;
+		width: 100%;
+	}
+
+	.message-header-container > * {
+		padding-left: 0.25em;
+		padding-right: 0.25em;
+	}
+
+	.message-createtime {
+		font-weight: bold;
+		white-space: nowrap;
+		align-self: center;
+	}
+
+	.message-from-subject {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.message-from-subject > div {
+		display: flex;
+		align-items: center;
+	}
+
+	.message-from-subject > div > div {
+		padding-left: 0.3em;
+		padding-right: 0.3em;
+	}
+
+	.message-from-subject > div:nth-child(2) > div:nth-child(2) {
+		white-space: normal;
+	}
+
 	@media print {
 		.auto-width {
 			width: 100%;
@@ -49,8 +93,8 @@
 		<td colspan="4" class="flr bb">
 			<table style="width: 100%;">
 				<colgroup>
-					<col style="width: %1;">
-					<col style="width: %99;">
+					<col style="width: 1%;">
+					<col style="width: 99%;">
 				</colgroup>
 				<tr>
 					<td>
@@ -120,8 +164,67 @@
 					<col style="width: 100%;">
 				</colgroup>
 				{foreach $ticket.content as $item}
+					{if $comment_details}
+						<tr>
+							<td class="ftop {if $item.note} blend{/if} message-header">
+								<div class="message-header-container">
+									<div class="message-createtime">
+										{$item.createtime|date_format:"%Y/%m/%d %H:%M"}
+									</div>
+									<div class="message-from-subject">
+										<div{if ($item.type != $smarty.const.RTMESSAGE_REGULAR && $item.type != $smarty.const.RTMESSAGE_NOTE)
+											|| (!$item.customerid && !$item.userid && !$item.mailfrom
+											&& !$ticket.requestor && !$item.phonefrom)} style="display: none;"{/if}>
+											<div>
+												<strong>{trans("From:")}</strong>
+											</div>
+											<div>
+												{if $item.type == $smarty.const.RTMESSAGE_REGULAR}
+													{if $item.customerid}
+														{if $item.mailfrom}
+															{icon name="mail"}
+														{elseif $item.phonefrom}
+															{icon name="sms"}
+														{/if}
+														{$item.customername} (#{$item.customerid})
+													{elseif $mitem.userid}
+														{icon name="user"}
+														{$item.username|escape}
+													{elseif $item.mailfrom}
+														{icon name="mail"}
+														{$item.mailfrom|escape}
+													{else}
+														{$ticket.requestor|escape}
+														{if $ticket.requestor_mail}
+															&lt;{$ticket.requestor_mail|escape}
+														{/if}
+													{/if}
+													{if $item.phonefrom}
+														{icon name="phone"}
+														{$item.phonefrom}
+													{/if}
+												{else}
+													{$item.username|escape}
+												{/if}
+											</div>
+										</div>
+										{if $item.type == $smarty.const.RTMESSAGE_REGULAR}
+											<div>
+												<div>
+													<strong>{trans("Subject:")}</strong>
+												</div>
+												<div>
+													{$item.subject|escape}
+												</div>
+											</div>
+										{/if}
+									</div>
+								</div>
+							</td>
+						</tr>
+					{/if}
 					<tr>
-						<td class="ftop{if $item.note} blend{/if}">
+						<td class="{if !$comment_details}ftop{/if}{if $item.note} blend{/if}">
 							{if $message.contenttype == 'text/plain'}
 								{$item.body|trim|escape|regex_replace:"/\r?\n/":'<br>'|message_quote}
 							{else}
