improvement: allow to use fa icons on printed reports

--- a/css/style_print.less
+++ b/css/style_print.less
@@ -1,5 +1,9 @@
 @fonts: LiberationSans, sans-serif;
 
+@import "less/lms-variables";
+@import "less/fontawesome";
+@import "less/icons";
+
 BODY {
 	font-size: 8pt;
 	font-family: @fonts;
