enhancement: added smarty '{day_selection ...}' functions which allows to easily set now + X days date into controlled form elements (LMS+ #1988)

--- a/css/style.less
+++ b/css/style.less
@@ -2594,6 +2594,16 @@ fieldset {
 	}
 }
 
+.lms-ui-day-selection-wrapper {
+	display: inline;
+	.lms-ui-button.lms-ui-button-day-selection {
+		margin-top: 0;
+		@media screen and (min-width: @mobile-max-width + 1px) {
+			min-height: 1.8em;
+		}
+	}
+}
+
 .lms-ui-karma-container {
 	display: inline-block;
 	.lms-ui-karma-button,
