--- a/templates/default/customer/customeradd.html
+++ b/templates/default/customer/customeradd.html
@@ -670,6 +670,21 @@
 	$(function() {
 		$('form[name="customeradd"] [name="customeradd[lastname]"]').focus();
 
+		var legal_person_required_properties = [];
+		var natural_person_required_properties = [];
+
+		{if !empty($legal_person_required_properties)}
+			{foreach $legal_person_required_properties as $property}
+				legal_person_required_properties.push('{$property}');
+			{/foreach}
+		{/if}
+
+		{if !empty($natural_person_required_properties)}
+			{foreach $natural_person_required_properties as $property}
+				natural_person_required_properties.push('{$property}');
+			{/foreach}
+		{/if}
+
 		$('[name="customeradd[pin]"]').change(function() {
 			if (validate_random_string(this.value, {$pin_min_size}, {$pin_max_size}, '{str_replace("'", "\'", $pin_allowed_characters)}')) {
 				this.setCustomValidity('');
@@ -706,7 +721,12 @@
 		});
 
 		$('[name="customeradd[type]"]').change(function() {
-			$('[name="customeradd[name]"]').prop('required', $('#private').prop('checked'));
+			var isPrivate = $('#private').prop('checked');
+			$('[name="customeradd[name]"]').prop('required', isPrivate);
+			var required_properties = isPrivate ? natural_person_required_properties : legal_person_required_properties;
+			$.each(['ten', 'ssn', 'icn'], function(index, property) {
+				$('[name="customeradd[' + property + ']"]').prop('required', required_properties.indexOf(property) !== -1);
+			});
 		}).change();
 
 		$('#randomize').click(function() {
