improvement: use lms-ui-advanced-select for schema selection list

--- a/templates/default/customer/customerassignmenthelper.html
+++ b/templates/default/customer/customerassignmenthelper.html
@@ -146,7 +146,7 @@
 								</TD>
 								<TD style="width: 98%;">
 									<select size="1" name="{$variable_prefix}[schemaid]" id="promotion-select"
-										{tip text="Select promotion schema" trigger="promotion-select"}>
+										{tip text="Select promotion schema" trigger="promotion-select" class="lms-ui-advanced-select"}>
 										{if $promotion_only}
 											<option value="0">{trans("<!promotionschema>- none -")}</option>
 										{/if}
