improvement: make disabled option list in lms-ui-advanced-select more readable

--- a/css/less/advanced-select.less
+++ b/css/less/advanced-select.less
@@ -48,6 +48,9 @@
         font-weight: bold;
         text-decoration: none;
       }
+      &.disabled-result {
+        color: @blend;
+      }
     }
   }
   .chosen-drop {
