--- a/templates/default/customer/customersearchresults.html
+++ b/templates/default/customer/customersearchresults.html
@@ -95,7 +95,7 @@
 			{if $customerlist[customerlist].account}
 				<img src="img/node{if !$customerlist[customerlist].online}_off{/if}.gif" alt=""
 					class="lms-ui-hint-rollover"
-					data-url="?m=customerinfoshort&id={$customerlist[customerlist].id}">
+					data-url="?m=nodelistshort&id={$customerlist[customerlist].id}">
 			{/if}
 		</TD>
 		<TD class="text-right valign-top nobr">
