enhancement: new '%commented_balance' symbol support added in messageadd form (explanation in tooltip)

--- a/templates/default/message/messageadd.html
+++ b/templates/default/message/messageadd.html
@@ -540,6 +540,7 @@
 			Supported substitutions/variables:<br>
 			<strong>%customer</strong> - customer first name and last name or name,<br>
 			<strong>%balance</strong>, <strong>%totalsaldo</strong>, <strong>%totalB</strong> - customer total balance,<br>
+			<strong>%commented_balance</strong> - customer total balance as absolute value with text comment explaining customer billing status,<br>
 			<strong>%b</strong> - customer expired liability balance amount to pay,<br>
 			<strong>%totalb</strong> - customer total balance amount to pay,<br>
 			<strong>%B</strong>, <strong>%saldo</strong> - customer expired liability balance,<br>
