--- a/userpanel/modules/info/templates/userinfobox.html
+++ b/userpanel/modules/info/templates/userinfobox.html
@@ -141,8 +141,8 @@
 	}
 	<tr>
 		<td width="100%" colspan="3" align="right">
-			{if ConfigHelper::checkConfig('userpanel.pin_changes')}
-			<a href="?m=info&f=updatepinform" accesskey="P">{trans("Update PIN")} {img src="pin.gif" alt="PIN"}</a>
+			{if ConfigHelper::checkConfig('userpanel.pin_changes') || isset($passwd_change_required)}
+				<a href="?m=info&f=updatepinform" accesskey="P">{trans("Update PIN")} {img src="pin.gif" alt="PIN"}</a>
 			{/if}
 			<a href="?m=info&amp;f=updateuserform" accesskey="A">{trans("Actualize data")} {img src="edit.gif" alt="Edit"}</a>
 		</td>
